stub of course pages

--- a/30516/index.html
+++ b/30516/index.html
@@ -3,14 +3,15 @@
 <head>
   <link rel="stylesheet" href="../luca.css" type="text/css">
 
-<title>30516 Theoretical Computer Science</title>
+<title>Fall 2019 | 30516 Theoretical Computer Science</title>
 
 
 </head>
 
 <body>
-<h1>30516 Theoretical Computer  Science</h1>
+    <h1>Fall 2019 &mdash; 30516 Theoretical Computer  Science</h1>
 
+    This course introduces the beautiful and powerful techniques of theoretical computer science for the design of algorithms, the analysis of algorithms, and the study of the computational complexity of problems. More information will provided about a week before the start of classes.
 
 
 </body>
