--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ Visiting students: Antares Chen<br>
 Postdocs: Ali Sinop, Or Meir, Irit Dinur<br>
 Students: 
 <ul>
-<li> Frank Ban (PhD 2019)
-<li>Pasin Manurangsi (PhD 2019)
+<li> Frank Ban (PhD 2019) now at Google
+<li>Pasin Manurangsi (PhD 2019) now at Google
 <li><a href=https://www.cse.cuhk.edu.hk/~siuon/>Siu On Chan</a> (PhD 2013) now at CUHK
 <li>
 Siu Man Chan
