--- a/30516/index.html
+++ b/30516/index.html
@@ -8,8 +8,9 @@
 
 </head>
 
-<body>
+<body><center>
     <h1>Fall 2019 &mdash; 30516 Theoretical Computer  Science</h1>
+</center>
 
     This course introduces the beautiful and powerful techniques of theoretical computer science for the design of algorithms, the analysis of algorithms, and the study of the computational complexity of problems. More information will provided about a week before the start of classes.
 
