--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ CUHK<br>
  <div class = "columnc">
  <h2> About me</h2>
  
- [<a href=bio.html><b>short bio</b></a>]  [<a href=cv.html><b>CV</b></a>] [<a href=https://lucatrevisan.wordpress.com/><b>in theory</b></a>]
+ [<a href=bio.html><b>short bio</b></a>] [<a href=https://lucatrevisan.wordpress.com/><b>in theory</b></a>]
  
  <p>
  
