--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   Professor of Computer Science<br>
   Department of Decision Sciences<br>
   Bocconi University<br>
-  Via Roetgen 1, Milano<br>
+  Via Roentgen 1, Milano<br>
   Italy<br>
   L.Trevisan at UniBocconi dot It
   </div>
