--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   Professor of Computer Science<br>
   Department of Decision Sciences<br>
   Bocconi University<br>
-  Via Roentgen 1, Milano<br>
-  Italy<br>
+  Via Roentgen 1<br>
+  20136 Milano, Italy<br>
   L.Trevisan at UniBocconi dot It
   </div>
  </div>  
