lecture 2 of optimization course

--- a/40391/index.html
+++ b/40391/index.html
@@ -57,7 +57,9 @@
     
     <ol>
         <li> 9/11. Overview of the course. Greedy methodology. Minimum spanning tree. (Reference: Dasgupta section 5.1)
-            </li>
+        </li>
+        <li> 9/17. Dynamic programming methodology. O(nm) time algorithm to compute edit distance. (Reference: Dasgupta 6.3 - it is a good idea to read sections 6.1 and 6.2 as well)
+        </li>
         </ol>
     
     <hr>
