added notes for lecture 2

--- a/30516/index.html
+++ b/30516/index.html
@@ -72,6 +72,7 @@
             </li>
         
         <li> Divide-and-conquer algorithm for multiplication of large integers. Statement and proof of the Master Theorem.<br>
+            <a href=lecture02.pdf>[Lecture Notes for Lecture 2]</a><br>
             Readings: Dasgupta Sections 2.1 and 2.2</li>
         
         <li> Randomized median algorithm with expected linear time. Definition of graphs, directed and undirected graphs, reachability, and connected components. Introduction to DFS. DFS as an algorithm for discovering the connected components of an undirected graph.<br>
