--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
    Fa19: <a href =40391/index.html> 40391 Topics in computer science and optimization</a>
   </ul>
 <p>
-  Office hours: TBA
+  Office hours: Thursdays 11-noon in 3-E1-14 Roentgen (from Sept 12 to Dec 5)
 <p>
 
   <h3><a href=teaching.html>Past Teaching</a></h3>
