further adjusted page size

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
      <style>
        .columnpic{float: left; width: 30%}
        .columna{ width: 70%}
-       .columnb{float: left; width: 35%;margin:30px 30px 30px 30px;}
-       .columnc{float: left;width: 50%;margin:30px 30px 30px 30px;}
+       .columnb{float: left; width: 42%;margin:30px 30px 30px 30px;}
+       .columnc{float: left;width: 46%;margin:30px 30px 30px 30px;}
        .row:after{display: table}
      </style>
     
@@ -61,7 +61,7 @@
 <p>
   Office hours:
   <ul>
-      <li> Thursdays 11-noon<br> in 3-E1-14 Roentgen<br> (from Sept 12 to Dec 5)
+      <li> Thursdays 11-noon in 3-E1-14 Roentgen<br> (from Sept 12 to Dec 5)
           </li>
       </ul>
 
