summary of lecture 4 of opt and lecture 5 of tcs

--- a/40391/index.html
+++ b/40391/index.html
@@ -62,6 +62,8 @@
         </li>
         <li> 9/18. Dynamic programming algorithms for shortest paths in the presence of negative weights: single source in time O(|V|*|E|), all pairs in time O(|V|^3), in DAGs in time O(|V| +|E|). (References: Dasgupta sections 4.6, 4.7 and 6.6)
             </li>
+        <li> 9/24. Dijsktra's algorithm. (Reference: Dasgupta section 4.4)
+            </li>
         </ol>
     
     <hr>
