--- a/pubs/index.html
+++ b/pubs/index.html
@@ -85,11 +85,11 @@ disclaimers on <a href="#cr">copyright</a>.
 
 <ul>
     <li class="special"><a href=#BT19><b>Vector Colorings of Random, Ramanujan, and Large-Girth Graphs</b></a> (Preprint, 2019)
-    <li class="special"><a href=#BCNPT18><b>Finding a Bounded-Degree Expander Inside a Dense One</b></a> (Preprint, 2018)</li>
-    <li class="special"><a href=#CKT18><b>A Ramsey-type Theorem on the Max-Cut Value of d-Regular Graphs</b></a> (Preprint, 2018)</li>
-    <li class="special"><a href=#MMT18><b>A New Algorithm for the Robust Semi-random Independent Set Problem</b></a> (Preprint, 2018)</li>
+     <li class="special"><a href=#CKT18><b>A Ramsey-type Theorem on the Max-Cut Value of d-Regular Graphs</b></a> (Preprint, 2018)</li>
     <li class="special"><a href=#CGNPST18><b>Consensus Needs Broadcast in Noiseless Models but can be Exponentially Easier in the Presence of Noise</b></a> (Preprint, 2018)</li>
-    <li class="special"><a href=#BST19><b>New Notions and Constructions of Sparsification for Graphs and Hypergraphs</b></a> (FOCS'19)
+    <li class="special"><a href=#BCNPT18><b>Finding a Bounded-Degree Expander Inside a Dense One</b></a> (SODA'20)</li>
+    <li class="special"><a href=#MMT18><b>A New Algorithm for the Robust Semi-random Independent Set Problem</b></a> (SODA'20)</li>
+<li class="special"><a href=#BST19><b>New Notions and Constructions of Sparsification for Graphs and Hypergraphs</b></a> (FOCS'19)
         <li class="special"> <a href=#CKST18>
         <b>Optimal Lower Bounds for Sketching Graph Cuts</b></a> (SODA'19)</li>
  
@@ -1864,6 +1864,7 @@ In <i>Proc. of IEEE Conference on Computational Complexity</i>, 2007, pp.205-216
 <ol>
     <li><a name="MMT18"></a>    Theo McKenzie, Hermish Mehta, Luca Trevisan<br>
         <b>A New Algorithm for the Robust Semi-random Independent Set Problem</b><br>
+        In <i>Proc. of SODA 2020</i>
         <a href=https://arxiv.org/abs/1808.03633>arXiv:1808.03633</a></li>
     
 
