--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ CUHK<br>
  
  I was born and raised in Rome, and I received a PhD in Computer Science from the Sapienza University of Rome. Then I have been a postdoc at MIT and at DIMACS, an assistant professor at Columbia University, an assistant professor, an associate professor and a  professor at U.C. Berkeley, then a professor at Stanford, then again a professor at U.C. Berkeley, before finally making it to Milan in 2019.
  <p>
- During my graduate studies, I have also been a visiting student at the IBM T.J Watson research center, at the Technical University of Catalonya, and at the University of Geneva. Later, I have spent sabbaticals at IPAM in Los Angeles, at the Institute for Advanced Study in Princeton, at Tsinghua University in Beijing, at  Tor Vergata University in Rome, and at Academia Sinica in Taipei.
+ During my graduate studies, I have also been a visiting student at the IBM T.J Watson research center, at the Technical University of Catalonya, and at the University of Geneva. Later, I have spent sabbaticals at IPAM in Los Angeles, at the Institute for Advanced Study in Princeton, at Tsinghua University in Beijing, at  Tor Vergata University in Rome, and at Academia Sinica in Taipei. If I have never spent a month or more at your institution, you should consider inviting me.
  <p>
  I write at <a href=https://lucatrevisan.wordpress.com/>in theory</a> about theoretical computer science and other things that interest me. 
  </div>
