--- a/teaching/index.html
+++ b/teaching/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="luca.css" type="text/css">
+  <link rel="stylesheet" href="../luca.css" type="text/css">
 
 <title>Luca Trevisan |  Teaching</title>
 
