problem set 2 solutions

--- a/30516/index.html
+++ b/30516/index.html
@@ -73,7 +73,7 @@
         <p>
         
         <li> <a href=pset2.pdf>Problem Set 2</a> covers lectures 7-12<br>
-            Solutions: [coming soon]
+            [<a href=pset2-sol.pdf>Solutions</a>]
             </li>
         
         </ol>
