--- a/30516/index.html
+++ b/30516/index.html
@@ -140,7 +140,7 @@
         <p>
         
         <li> Introduction to the maximum flow problem: definition of the problem, notion of residual network, definition of capacity of a cut, Ford-Fulkerson algorithm, statement of the Max Flow - Min Cut Theorem<br>
-            Readings: chapter 9 of <a href=https://lucatrevisan.github.io/books/cs261.pdf>these notes</a>
+            Readings: Dasgupta 7.2, and chapter 9 of <a href=https://lucatrevisan.github.io/books/cs261.pdf>these notes</a>
             </li>
         
         <p>
