ITCS accepted paper

--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
     <i>A New Algorithm for the Robust Semi-random Independent Set Problem</i><br>
     To appear in <a href=https://www.siam.org/Conferences/CM/Conference/soda20>SODA 2020</a>, <a href=https://arxiv.org/abs/1808.03633>arXiv:1808.03633</a></li>
  
+ <p>
+ 
+ <li>Andrea Clementi, Luciano Gual&agrave;, Emanuele Natale, Francesco
+ Pasquale, Giacomo Scornavacca and Luca Trevisan<br>
+ <i>Consensus vs Broadcast, with and w/o Noise</i><br>
+ To appear in <a href=http://itcs-conf.org/itcs20/itcs20-cfp.html>ITCS 2020</a>,
+ <a href=https://arxiv.org/abs/1807.05626>arXiv:1807.05626</a>
+ </li>
  
     
     </ul>
