--- a/pubs/index.html
+++ b/pubs/index.html
@@ -86,7 +86,7 @@ disclaimers on <a href="#cr">copyright</a>.
 <ul>
     <li class="special"><a href=#BT19><b>Vector Colorings of Random, Ramanujan, and Large-Girth Graphs</b></a> (Preprint, 2019)
      <li class="special"><a href=#CKT18><b>A Ramsey-type Theorem on the Max-Cut Value of d-Regular Graphs</b></a> (Preprint, 2018)</li>
-    <li class="special"><a href=#CGNPST18><b>Consensus Needs Broadcast in Noiseless Models but can be Exponentially Easier in the Presence of Noise</b></a> (Preprint, 2018)</li>
+     <li class="special"><a href=#CGNPST18><b>Consensus vs Broadcast, with and w/o Noise</b></a> (ITCS'20)</li>
     <li class="special"><a href=#BCNPT18><b>Finding a Bounded-Degree Expander Inside a Dense One</b></a> (SODA'20)</li>
     <li class="special"><a href=#MMT18><b>A New Algorithm for the Robust Semi-random Independent Set Problem</b></a> (SODA'20)</li>
 <li class="special"><a href=#BST19><b>New Notions and Constructions of Sparsification for Graphs and Hypergraphs</b></a> (FOCS'19)
@@ -3007,12 +3007,14 @@ proceedings]</a></li>
 <li><a name="BCNPT18"></a>   
     Luca Becchetti, Andrea Clementi, Emanuele Natale, Francesco Pasquale, and Luca Trevisan<br>
     <b>Finding a Bounded-Degree Expander Inside a Dense One</b><br>
+    To appear in <a href=https://www.siam.org/Conferences/CM/Conference/soda20>SODA 2020</a><br>
     <a href=https://arxiv.org/abs/1811.10316>arXiv:1811.10316</a>
     </li>
 
     
     <li><a name="CGNPST18"></a>    Andrea E. F. Clementi, Luciano Guala', Emanuele Natale, Francesco Pasquale, Giacomo Scornavacca, Luca Trevisan<br>
         <b>Consensus Needs Broadcast in Noiseless Models but can be Exponentially Easier in the Presence of Noise</b><br>
+        To appear in <a href=http://itcs-conf.org/itcs20/itcs20-cfp.html>ITCS 2020</a><br>
         <a href=https://arxiv.org/abs/1807.05626>arXiv:1807.05626</a></li>
 
     
