--- a/30516/index.html
+++ b/30516/index.html
@@ -160,7 +160,7 @@
         <p>
         
         <li> Dynamic programming: Edit distance.<br>
-            Readings: 6.3 (sections 6.1 and 6.2 give addtional context and examples)
+            Readings: Dasgupta 6.3 (sections 6.1 and 6.2 give addtional context and examples)
             </li>
         
         <p>
