--- a/30516/index.html
+++ b/30516/index.html
@@ -168,8 +168,8 @@
         <p>
 
 
-<li> Dynamic programming: Knapsack.<br>
-Readings: Dasgupta 6.4
+<li> Dynamic programming: all-pairs shortest paths, Knapsack.<br>
+Readings: Dasgupta 6.4, 6.6
 </li>
 
 <p>
