--- a/index.html
+++ b/index.html
@@ -47,8 +47,24 @@
 <p>
 
 <hr>
+<p>
+
+
+<h2>Join my group in Fall 2020</h2>
+
+<ul>
+
+<li>Applications for post-doc positions  are <a href=https://www.unibocconi.eu/wps/wcm/connect/3ecc85da-ac66-46ac-9db7-09ac0ef9b715/Call-2ADR-01B1-Bidsa-Erc.pdf?MOD=AJPERES&CVID=mUjaHAv>due December 15, 2019</a></li>
+
+<li>Applications to <a href=https://www.unibocconi.eu/wps/wcm/connect/Bocconi/SitoPubblico_EN/Navigation+Tree/Home/Programs/PhD/PhD+in+Statistics+and+Computer+Science/PhD+in+Statistics+and+Computer+Science+home>our PhD program</a> are due January 15, 2020 (<a href=https://www.unibocconi.eu/wps/wcm/connect/Bocconi/SitoPubblico_EN/Navigation+Tree/Home/Programs/PhD/PhD+in+Statistics+and+Computer+Science/Admissions/>application page</a>)</li>
+
+</ul>
+<p>
+
+<hr>
 
 <p>
+
 
   <div class = "row">
   <div class = "columnb">
@@ -72,6 +88,10 @@
   <h3><a href=teaching/index.html>Past Teaching</a></h3>
   <p>
   <h3><a href="https://lucatrevisan.wordpress.com/lecture-notes/">Lecture Notes</a></h3>
+  
+  
+  
+  
     </div>
     
     
