--- a/30516/index.html
+++ b/30516/index.html
@@ -174,6 +174,16 @@ Readings: Dasgupta 6.4, 6.6
 
 <p>
 
+<li> Dynamic programming: time-bounded shortest paths and TSP.<br>
+Readings: <a href=lecture15.pdf>Notes for lecture 15<a> </li>
+
+<p>
+
+<li>P, NP and NP completeness.<br>
+Readings: Dasgupta 8.1 and 8.2, <a href=lecture16.pdf>Notes for lecture 16</a></li>
+
+<p>
+
         
         </ol>
     
