lecture 17 of tcs

--- a/30516/index.html
+++ b/30516/index.html
@@ -175,7 +175,7 @@ Readings: Dasgupta 6.4, 6.6
 <p>
 
 <li> Dynamic programming: time-bounded shortest paths and TSP.<br>
-Readings: <a href=lecture15.pdf>Notes for lecture 15<a> </li>
+Readings: <a href=lecture15.pdf>Notes for lecture 15</a> </li>
 
 <p>
 
@@ -184,6 +184,11 @@ Readings: Dasgupta 8.1 and 8.2, <a href=lecture16.pdf>Notes for lecture 16</a></
 
 <p>
 
+<li>Reductions from 3SAT to Independent Set, Vertex Cover, and Subset Sum.<br>
+Readings: <a href=lecture17.pdf>Notes for lecture 17</a> and see also Dasgupta 8.3 (some of the
+reductions are different)</li>
+
+<p>
         
         </ol>
     
