--- a/30516/index.html
+++ b/30516/index.html
@@ -196,7 +196,7 @@ reductions are different)</li>
         <p>
         
 <li>NP-completeness of Circuit-SAT and 3SAT.<br>
-Readings: <a href=lecture19.pdf>Notes for lecture 18</a> and Dasgupta 8.3
+Readings: <a href=lecture19.pdf>Notes for lecture 18</a> and Dasgupta 8.3. There are additional details in Section 7.4 of Sipser.
 
 <p>
 
