--- a/30516/index.html
+++ b/30516/index.html
@@ -84,7 +84,10 @@
         
         <p>
         
-        <li><a href=pset3.pdf>Problem Set 3</a> covers lectures 13-19
+        <li><a href=pset3.pdf>Problem Set 3</a> covers lectures 13-19<br>
+            [<a href=pset3-sol.pdf>Solutions</a>]
+            </li>
+
         </li>
 <p>
         <li><a href=pset4.pdf>Problem Set 4</a> covers lectures 20-21 (the exam will not have questions on cryptography)
