--- a/30516/index.html
+++ b/30516/index.html
@@ -85,13 +85,15 @@
         <p>
         
         <li><a href=pset3.pdf>Problem Set 3</a> covers lectures 13-19<br>
-            [<a href=pset3-sol.pdf>Solutions</a>]
+            [<a href=pset3-sol.pdf>Solutions (revised December 6, 2019)</a>]
             </li>
 
         </li>
 <p>
         <li><a href=pset4.pdf>Problem Set 4</a> covers lectures 20-21 (the exam will not have questions on cryptography)
-        </li>
+        [<a href=pset4-sol.pdf>Solutions (revised December 6, 2019)</a>]
+         </li>
+</li>
   
         
         </ol>
