corrected PhD application deadline

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
 <ul>
 
-<li>Applications for post-doc positions  are <a href=https://www.unibocconi.eu/wps/wcm/connect/3ecc85da-ac66-46ac-9db7-09ac0ef9b715/Call-2ADR-01B1-Bidsa-Erc.pdf?MOD=AJPERES&CVID=mUjaHAv>due December 15, 2019</a></li>
 
-<li>Applications to <a href=https://www.unibocconi.eu/wps/wcm/connect/Bocconi/SitoPubblico_EN/Navigation+Tree/Home/Programs/PhD/PhD+in+Statistics+and+Computer+Science/PhD+in+Statistics+and+Computer+Science+home>our PhD program</a> are due January 15, 2020 (<a href=https://www.unibocconi.eu/wps/wcm/connect/Bocconi/SitoPubblico_EN/Navigation+Tree/Home/Programs/PhD/PhD+in+Statistics+and+Computer+Science/Admissions/>application page</a>)</li>
+
+<li>Applications to <a href=https://www.unibocconi.eu/wps/wcm/connect/Bocconi/SitoPubblico_EN/Navigation+Tree/Home/Programs/PhD/PhD+in+Statistics+and+Computer+Science/PhD+in+Statistics+and+Computer+Science+home>our PhD program</a> are due February 3, 2020 (<a href=https://www.unibocconi.eu/wps/wcm/connect/Bocconi/SitoPubblico_EN/Navigation+Tree/Home/Programs/PhD/PhD+in+Statistics+and+Computer+Science/Admissions/>application page</a>)</li>
 
 </ul>
 <p>
@@ -69,16 +69,13 @@
   <div class = "row">
   <div class = "columnb">
     <h2> Teaching</h2>
-    Current and planned courses
+    No teaching in Spring 2020
     <p>
-    Fa19:  <a href=30516/index.html> 30516 Theoretical computer science</a><br>
-   Fa19: <a href =40391/index.html> 40391 Topics in computer science and optimization</a>
-  </ul>
+      </ul>
 <p>
   Office hours:
   <ul>
-      <li> Thursdays 11-noon in 3-E1-14 Roentgen<br> (from Sept 12 to Dec 5)
-          </li>
+      <li> Spring 2020: by appointment only          </li>
       </ul>
 
           
