--- a/index.html
+++ b/index.html
@@ -50,26 +50,15 @@
 <p>
 
 
-<h2>Join my group in Fall 2020</h2>
-
-<ul>
-
-
-
-<li>Applications to <a href=https://www.unibocconi.eu/wps/wcm/connect/Bocconi/SitoPubblico_EN/Navigation+Tree/Home/Programs/PhD/PhD+in+Statistics+and+Computer+Science/PhD+in+Statistics+and+Computer+Science+home>our PhD program</a> are due February 3, 2020 (<a href=https://www.unibocconi.eu/wps/wcm/connect/Bocconi/SitoPubblico_EN/Navigation+Tree/Home/Programs/PhD/PhD+in+Statistics+and+Computer+Science/Admissions/>application page</a>)</li>
-
-</ul>
-<p>
-
-<hr>
-
-<p>
 
 
   <div class = "row">
   <div class = "columnb">
     <h2> Teaching</h2>
-    No teaching in Spring 2020
+    <ul>
+     <li>Fall 2020: Computer Science 2 (PhD course)
+     <li>Spring 2021: <a href="./30540/index.html">30540 Computer Science 2</a> (BAI)
+    </ul>
     <p>
       </ul>
 <p>
