--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <p>
   Office hours:
   <ul>
-      <li> Spring 2020: by appointment only          </li>
+      <li> Summer 2020: by appointment only          </li>
       </ul>
 
           
