--- a/pubs/index.html
+++ b/pubs/index.html
@@ -87,7 +87,7 @@ disclaimers on <a href="#cr">copyright</a>.
 
     <li class="special"><a href=#HST19>
     <b>Subexponential LPs Approximate Max Cut</b></a>
-    (Preprint, 2019)    </li>
+    (FOCS'20)    </li>
     
     <li class="special"><a href=#BT19><b>Vector Colorings of Random, Ramanujan, and Large-Girth Graphs</b></a> (Preprint, 2019)
      <li class="special"><a href=#CKT18><b>A Ramsey-type Theorem on the Max-Cut Value of d-Regular Graphs</b></a> (Preprint, 2018)</li>
@@ -1871,12 +1871,12 @@ In <i>Proc. of IEEE Conference on Computational Complexity</i>, 2007, pp.205-216
 
     <li><a name="HST19"></a>Sam Hopkins, Tselil Schramm and Luca Trevisan<br>
     <b>Subexponential LPs Approximate Max Cut</b><br>
-    <a href=https://arxiv.org/abs/1911.10304>arXiv:1911.10304</a>
+    In <i>Proc. of FOCS 2020</i>, <a href=https://arxiv.org/abs/1911.10304>arXiv:1911.10304</a>
     </li>
 
     <li><a name="MMT18"></a>    Theo McKenzie, Hermish Mehta, Luca Trevisan<br>
         <b>A New Algorithm for the Robust Semi-random Independent Set Problem</b><br>
-        In <i>Proc. of SODA 2020</i>
+        In <i>Proc. of SODA 2020</i>, 
         <a href=https://arxiv.org/abs/1808.03633>arXiv:1808.03633</a></li>
     
 
