material for first week

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <p>
   Office hours:
   <ul>
-      <li> Fall 2020: by appointment only          </li>
+      <li> Fall 2020: by appointment only (email me for an appointment)        </li>
       </ul>
 
           
