--- a/40974/index.html
+++ b/40974/index.html
@@ -82,9 +82,9 @@
    
    <ul>
     <li>11/17: use of DFS to find strongly connected components in directed graphs. BFS (<a href="11-17-lecture.pdf">whiteboard transcript</a>)
-    <li>11/19: Dijkstra's algorithm (<a href="11-19-lecture.pdf">whiteboard transcript</a>)
+    <li>11/19: Dijkstra's algorithm (<a href="11-19-lecture.pdf">whiteboard transcript</a>) (<a href="notes-11-19.pdf">additional notes</a>)
   </ul>
-  References: Sections 3.4, 4.1, 4.2, 4.3, 4.4 and 4.5<br>
+  References: Sections 3.4, 4.1, 4.2, 4.3, 4.4 and 4.5, <a href="notes-11-19.pdf">additional notes</a><br>
   Recommended exercises: 3.29, 3.31, 4.4, 4.8, 4.17(a)
   
 
