--- a/40974/index.html
+++ b/40974/index.html
@@ -87,7 +87,17 @@
   References: Sections 3.4, 4.1, 4.2, 4.3, 4.4 and 4.5, <a href="notes-11-19.pdf">additional notes</a><br>
   Recommended exercises: 3.29, 3.31, 4.4, 4.8, 4.17(a)
   
-
+  <p>
+  
+  <b>Week 4 (Greedy Algorithms)</b><br>
+   
+   <ul>
+    <li>11/24: Flows in networks, Ford-Fulkerson algorithm  (<a href="11-24-lecture.pdf">whiteboard transcript</a>) (<a href="notes-11-24.pdf">additional notes</a>)
+   </ul>
+  References: <a href="notes-11-24.pdf">additional lecture notes</a>
+  
+  <p>
+ 
     
     <hr>
  
