--- a/teaching/bwca17/index.html
+++ b/teaching/bwca17/index.html
@@ -183,7 +183,7 @@ The main reference will be a set of lecture notes. Our course will have a large 
 <p>
 
 <li>9/21. Introducing the stochastic block model.<br>
-    [<a href="lectures/lecture09pdf">notes</a>]</li>
+    [<a href="lectures/lecture09.pdf">notes</a>]</li>
 
 <p>
 
