lecture on huffman's algorithm

--- a/30540/index.html
+++ b/30540/index.html
@@ -59,6 +59,7 @@ and the study of the computational complexity of problems.
     <ul>
         <li> <a href=notes-02-12.pdf>Notes on topological sort</a></li>
         <li> <a href=notes-02-19.pdf>Notes on the analysis of Dijkstra's algorithm</a></li>
+        <li> <a href=notes-03-05.pdf>Notes on the analysis of Huffman's algorithm</a></li>
     
     </ul>
     
