--- a/30540/index.html
+++ b/30540/index.html
@@ -69,6 +69,7 @@ and the study of the computational complexity of problems.
         <li> <a href=board-2021-03-24.pdf>Board transcript of lecture of March 24</a></li>
         <li> <a href=board-2021-03-25.pdf>Board transcript of lecture of March 25</a></li>
         <li> <a href=board-2021-03-26.pdf>Board transcript of lecture of March 26</a></li>
+        <li> <a href=board-2021-03-30.pdf>Board transcript of lecture of March 30</a></li>
         </ul>
 
     
