--- a/pubs/by-year.html
+++ b/pubs/by-year.html
@@ -64,6 +64,10 @@ h2 {
 
 <ul>
 
+    <li><a name="BCDPTZ21">Luca Becchetti, Andrea Clementi, Riccardo Denni, Francesco Pasquale, Luca Trevisan, and Isabella Ziccardi<br>
+        <b>Sharp Thresholds for a SIR Model on One-Dimensional Small-World Networks</b><br>
+        Preprint, 2021<br> <a href=https://arxiv.org/abs/2103.16398>arXiv:2103.16398</a>
+        </li>
     
     <li><a name="CST20"></a>Antares Chen, Jonathan Shi and Luca Trevisan<br>
         <b>Cut Sparsification of the Clique Beyond the Ramanujan Bound</b><br>
