Added service activities

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -100,9 +100,24 @@ Spring 14:</td><td> <b><a href=cs103-14/index.html>CS103: Mathematics for Comput
    Fall19:
    </td>
    <td>
-       <b><b><a href =../40391/index.html> 40391: Topics in computer science and optimization</a></b>
+       <b><a href =../40391/index.html> 40391: Topics in computer science and optimization</a></b>
    </td>
- </tr>  
+ </tr>
+<tr>
+    <td>
+        Fall20:
+        </td>
+    <td>
+        <b><a href="../40974/index.html">40974 Computer Science 2</a></b> (PhD course)
+        </td>
+    </tr>
+<tr>
+    <td>Spring21:
+        </td>
+    <td><b><a href="../30540/index.html">30540 Computer Science 2</a></b> (BAI)
+        </td>
+    </tr>
+
  
 </tbody>
  </table>
