--- a/30540/index.html
+++ b/30540/index.html
@@ -61,6 +61,7 @@ and the study of the computational complexity of problems.
         <li> <a href=notes-02-19.pdf>Notes on the analysis of Dijkstra's algorithm</a></li>
         <li> <a href=notes-03-05.pdf>Notes on the analysis of Huffman's algorithm</a></li>
         <li> <a href=notes-flow.pdf>Notes on flows in networks</a></li>
+        <li> Notes on NP-completeness: <a href=notes-np1.pdf>Part 1</a>, <a href=notes-np2.pdf>Part 2</a>, and <a href=notes-np3.pdf>Part 3</a>
     
     </ul>
     
