--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 <h2>Advising</h2>
 
 <h3>Current</h3>
-Postdocs: Jonathan Shi<br>
+Postdocs: Jonathan Shi, Fabrizio Pittorino<br>
 Students: Theo McKenzie, Jess Banks<br>
 
 <p>
