--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
   <div class = "columnb">
     <h2> Teaching</h2>
     <ul>
-        <li>Fa 2020: <a href="./40974/index.html">40974 Computer Science 2</a> (PhD course)
-     <li>Sp 2021: <a href="./30540/index.html">30540 Computer Science 2</a> (BAI)
+        <li>Sp 2022: <a href="./41000/index.html">41000 Graph Theory</a> (PhD course)
+     <li>Sp 2022: <a href="./30540/index.html">30540 Computer Science 2</a> (BAI)
     </ul>
     <p>
       </ul>
