paper references edited

--- a/pubs/by-year.html
+++ b/pubs/by-year.html
@@ -543,11 +543,13 @@ In <i>Proc. of IEEE Conference on Computational Complexity</i>, 2007, pp.205-216
 
     <b>Gowers Uniformity, Influence of Variables, and PCPs<br>
 
-    </b>In <i>Proc. of 38th STOC,</i> ACM, 2006.
+        <i>Siam J. on Computing</i> 39(1): 323-360, 2009<br>
 
-    <b><br>
+        Preliminary version in <i>Proc. of 38th STOC,</i> ACM, 2006.
 
-    </b>[<a href="gowers.pdf">Manuscript</a>]</li>
+        <b><br>
+
+        </b>[<a href="gowers.pdf">Preprint</a>] </li>
 
   <li><a name="rl"></a>Omer Reingold, Luca Trevisan and Salil Vadhan<br>
 
