--- a/pubs/index.html
+++ b/pubs/index.html
@@ -1000,13 +1000,14 @@ version]</a></li>
 
   <li> <a name="gowers"></a>Alex Samorodnitsky and Luca Trevisan.&nbsp;<br>
 
-    <b>Gowers Uniformity, Influence of Variables, and PCPs<br>
+    <b>Gowers Uniformity, Influence of Variables, and PCPs</b><br>
+    <i>Siam J. on Computing</i> 39(1): 323-360, 2009<br>
 
-    </b>In <i>Proc. of 38th STOC,</i> ACM, 2006.
+    Preliminary version in <i>Proc. of 38th STOC,</i> ACM, 2006.
 
     <b><br>
 
-    </b>[<a href="gowers.pdf">Manuscript</a>] </li>
+    </b>[<a href="gowers.pdf">Preprint</a>] </li>
 
 
 
