notes for lecture 2 and 3

--- a/41000/index.html
+++ b/41000/index.html
@@ -58,6 +58,10 @@
          </li>
      <li> <a href=lecture01.pdf>Introduction</a>
          </li>
+     <li> <a href=lecture02.pdf>Fiedler's algorithm and Cheeger's inequalities</a>
+         </li>
+     <li> <a href=lecture03.pdf>Cheeger's inequalities continued</a>
+         </li>
 </ul>
     
 
@@ -71,9 +75,11 @@
 Laplacian matrix of an undirected graphs, eigenvalues of Laplacian and connectivity<br>
 Readings: <a href=lecture00.pdf>[Handout 0]</a> <a href=lecture01.pdf>[Handout 1]</a>
 <li>2022-02-09, 15:00-16:30<br>
-    Spectral algorithms for graph partitioning and their analysis
+    Spectral algorithms for graph partitioning and their analysis<br>
+    Readings: <a href=lecture02.pdf>[Handout 2]</a>
 <li>2022-02-10, 15:00-16:30<br>
-    Other connection between Laplacian eigenvalues and combinatorial properties
+    Other connection between Laplacian eigenvalues and combinatorial properties<br>
+    Readings: <a href=lecture03.pdf>[Handout 3]</a>
 
     </ul>
 <p>
