--- a/41000/index.html
+++ b/41000/index.html
@@ -62,6 +62,8 @@
          </li>
      <li> <a href=lecture03.pdf>Cheeger's inequalities continued</a>
          </li>
+     <li> <a href=lecture04.pdf>Random graphs and random matrices</a>
+         </li>
 </ul>
     
     
@@ -92,7 +94,8 @@ Readings: <a href=lecture00.pdf>[Handout 0]</a> <a href=lecture01.pdf>[Handout 1
 Week 2: random matrix theory, matrix perturbation theory, and spectral algorithms for random graphs
 <ul>
     <li>2022-02-15, 10:20-11:50<br>
-        Spectrum of the adjacency matrix of random graphs, Matrix Chernoff bounds, applications
+        Spectrum of the adjacency matrix of random graphs, Matrix Chernoff bounds, applications<br>
+        Readings: <a href=lecture04.pdf>[Handout 4]</a>
     <li>2022-02-16, 15:00-16:30<br>
         Spectral algorithms for finding planted cliques in random graphs</li>
     <li>2022-02-17, 15:00-16:30<br>
