--- a/41000/index.html
+++ b/41000/index.html
@@ -64,6 +64,8 @@
          </li>
      <li> <a href=lecture04.pdf>Random graphs and random matrices</a>
          </li>
+     <li> <a href=lecture05.pdf>Techniques from random matrix theory</a>
+         </li>
 </ul>
     
     
@@ -97,9 +99,10 @@ Week 2: random matrix theory, matrix perturbation theory, and spectral algorithm
         Spectrum of the adjacency matrix of random graphs, Matrix Chernoff bounds, applications<br>
         Readings: <a href=lecture04.pdf>[Handout 4]</a>
     <li>2022-02-16, 15:00-16:30<br>
-        Spectral algorithms for finding planted cliques in random graphs</li>
+        Bounding the operator norm of a random matrix: epsilon-nets and trace methods<br>
+        Readings: <a href=lecture05.pdf>[Handout 5]</a></li>
     <li>2022-02-17, 15:00-16:30<br>
-    Spectral algorithms for community detection in the stochastic block model
+        Spectral algorithms for finding planted cliques in random graphs
     </li>
     </ul>
 
