--- a/41000/index.html
+++ b/41000/index.html
@@ -66,6 +66,8 @@
          </li>
      <li> <a href=lecture05.pdf>Techniques from random matrix theory</a>
          </li>
+     <li> <a href=lecture06.pdf>Spectral methods for planted clique</a>
+         </li>
 </ul>
     
     
@@ -102,7 +104,9 @@ Week 2: random matrix theory, matrix perturbation theory, and spectral algorithm
         Bounding the operator norm of a random matrix: epsilon-nets and trace methods<br>
         Readings: <a href=lecture05.pdf>[Handout 5]</a></li>
     <li>2022-02-17, 15:00-16:30<br>
-        Spectral algorithms for finding planted cliques in random graphs
+        Spectral algorithms for finding planted cliques in random graphs<br>
+        Readings: <a href=lecture06.pdf>[Handout 6]</a></li>
+
     </li>
     </ul>
 
