--- a/41000/index.html
+++ b/41000/index.html
@@ -75,6 +75,7 @@
     
 <ul>
     <li><a href=pset1.pdf>Problem Set 1</a> </li>
+    <li><a href=pset2.pdf>Problem Set 2</a> </li>
 </ul>
 
     
@@ -108,7 +109,9 @@ Week 2: random matrix theory, matrix perturbation theory, and spectral algorithm
         Readings: <a href=lecture06.pdf>[Handout 6]</a></li>
 
     </li>
-    </ul>
+    <li>Exercises for week 2: <a href=pset2.pdf>[Problem Set 2]</a>
+
+</ul>
 
 <p>
 Week 3: other matrix norms and semidefinite programming algorithms
