--- a/41000/index.html
+++ b/41000/index.html
@@ -68,6 +68,8 @@
          </li>
      <li> <a href=lecture06.pdf>Spectral methods for planted clique</a>
          </li>
+     <li> <a href=lecture07.pdf>Spectral methods for SBM and an introduction to Semidefinite Programming</a>
+         </li>
 </ul>
     
     
@@ -117,22 +119,22 @@ Week 2: random matrix theory, matrix perturbation theory, and spectral algorithm
 Week 3: other matrix norms and semidefinite programming algorithms
 <ul>
 <li>2022-02-22, 10:20-11:50<br>
-Semidefinite programming, Grothendieck inequality, and more on community detection</li>
+More on community detection, and an introduction to Semidefinite programming</li>
     <li>2022-02-23, 15:00-16:30<br>
-    Semidefinite programming for community detection in the stochastic block model
+        Grothendieck inequality, and SDP for approximate community detection in the stochastic block model
     <li>2022-02-24, 15:00-16:30<br>
-        Semidefinite programming and robustness
+        SDP for exact community detection in the stochastic block model
         </li>
     </ul>
 <p>
 Week 4: spectra of graphs, random walks, and other random processes
 <ul>
 <li>2022-03-01, 10:20-11:50<br>
-    The spectrum of Cayley graphs
+    SDP for planted clique and a study of robustness
 <li>2022-03-02, 15:00-16:30<br>
-    Expanders, random walks and MCMC algorithms
+    Eigenvalues and eigenvectors of Cayley graphs
 <li>2022-03-03, 15:00-16:30<br>
-    Percolation
+    Expanders, random walks and MCMC algorithms
     </ul>
    
 </body>
