--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   
   <p>
   
-  Department of Decision Sciences<br>
+  Department of <s>Decision Sciences</s> Computing Sciences<br>
   Bocconi University<br>
   Via Roentgen 1<br>
   20136 Milano<br>
