--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
 <h3>Current</h3>
 Postdocs: Jonathan Shi<br>
-Students: <a href=https://lucaspesenti.github.io/>Luca Pesenti</a>, Theo McKenzie, Jess Banks<br>
+Students: <a href=https://lucaspesenti.github.io/>Lucas Pesenti</a>, Theo McKenzie, Jess Banks<br>
 
 <p>
 
