--- a/41000/index.html
+++ b/41000/index.html
@@ -70,6 +70,9 @@
          </li>
      <li> <a href=lecture07.pdf>Spectral methods for SBM and an introduction to Semidefinite Programming</a>
          </li>
+     <li> <a href=lecture11.pdf>The spectrum of Abelian Cayley graphs</a>
+         </li>
+
 </ul>
     
     
@@ -119,7 +122,8 @@ Week 2: random matrix theory, matrix perturbation theory, and spectral algorithm
 Week 3: other matrix norms and semidefinite programming algorithms
 <ul>
 <li>2022-02-22, 10:20-11:50<br>
-More on community detection, and an introduction to Semidefinite programming</li>
+More on community detection, and an introduction to Semidefinite programming<br>
+    Readings: <a href=lecture07.pdf>[Handout 7]</a></li>
     <li>2022-02-23, 15:00-16:30<br>
         Grothendieck inequality, and SDP for approximate community detection in the stochastic block model
     <li>2022-02-24, 15:00-16:30<br>
@@ -132,7 +136,8 @@ Week 4: spectra of graphs, random walks, and other random processes
 <li>2022-03-01, 10:20-11:50<br>
     SDP for planted clique and a study of robustness
 <li>2022-03-02, 15:00-16:30<br>
-    Eigenvalues and eigenvectors of Cayley graphs
+    Eigenvalues and eigenvectors of Cayley graphs<br>
+    Readings: <a href=lecture11.pdf>[Handout 11]</a></li>
 <li>2022-03-03, 15:00-16:30<br>
     Expanders, random walks and MCMC algorithms
     </ul>
