41000 lecture notes for lecture 8

--- a/41000/index.html
+++ b/41000/index.html
@@ -70,6 +70,9 @@
          </li>
      <li> <a href=lecture07.pdf>Spectral methods for SBM and an introduction to Semidefinite Programming</a>
          </li>
+     <li> <a href=lecture08.pdf>Grothendieck inequality and approximate community detection in the SBM</a>
+         </li>
+     
      <li> <a href=lecture11.pdf>The spectrum of Abelian Cayley graphs</a>
          </li>
 
@@ -125,7 +128,8 @@ Week 3: other matrix norms and semidefinite programming algorithms
 More on community detection, and an introduction to Semidefinite programming<br>
     Readings: <a href=lecture07.pdf>[Handout 7]</a></li>
     <li>2022-02-23, 15:00-16:30<br>
-        Grothendieck inequality, and SDP for approximate community detection in the stochastic block model
+        Grothendieck inequality, and SDP for approximate community detection in the stochastic block model<br>
+        Readings: <a href=lecture08.pdf>[Handout 8]</a></li>
     <li>2022-02-24, 15:00-16:30<br>
         SDP for exact community detection in the stochastic block model
         </li>
