--- a/41000/index.html
+++ b/41000/index.html
@@ -72,7 +72,9 @@
          </li>
      <li> <a href=lecture08.pdf>Grothendieck inequality and approximate community detection in the SBM</a>
          </li>
-     
+     <li> <a href=lecture09.pdf>Exact community detection in the SBM</a>
+         </li>
+
      <li> <a href=lecture11.pdf>The spectrum of Abelian Cayley graphs</a>
          </li>
 
@@ -131,8 +133,8 @@ More on community detection, and an introduction to Semidefinite programming<br>
         Grothendieck inequality, and SDP for approximate community detection in the stochastic block model<br>
         Readings: <a href=lecture08.pdf>[Handout 8]</a></li>
     <li>2022-02-24, 15:00-16:30<br>
-        SDP for exact community detection in the stochastic block model
-        </li>
+        SDP for exact community detection in the stochastic block model<br>
+        Readings: <a href=lecture09.pdf>[Handout 9]</a></li>
     </ul>
 <p>
 Week 4: spectra of graphs, random walks, and other random processes
