--- a/30540/index.html
+++ b/30540/index.html
@@ -62,6 +62,7 @@ and the study of the computational complexity of problems.
     
     <ul>
         <li><a href=notes-dijkstra.pdf>Notes on the proof of correctness of Dijkstra's algorithm</a></li>
+        <li><a href=notes-compression.pdf>Notes on data compression</a></li>
         </ul>
     
 
@@ -187,7 +188,7 @@ and the study of the computational complexity of problems.
 <li>
 2022-03-04: <b>Greedy Algorithms III</b><br>
 <i>Contents:</i> Prefix codes, Huffman coding<br>
-<i>Readings:</i> Section 5.2, notes<br>
+<i>Readings:</i> Section 5.2, <a href=notes-compression.pdf>notes</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
@@ -196,7 +197,7 @@ and the study of the computational complexity of problems.
 <li>
 2022-03-08: <b>Greedy Algorithms IV</b><br>
 <i>Contents:</i> More on data compression, entropy<br>
-<i>Readings:</i> Section 5.2, notes<br>
+<i>Readings:</i> Section 5.2, <a href=notes-compression.pdf>notes</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
