--- a/41000/index.html
+++ b/41000/index.html
@@ -74,6 +74,8 @@
          </li>
      <li> <a href=lecture09.pdf>Exact community detection in the SBM</a>
          </li>
+     <li> <a href=lecture10.pdf>Semidefinite programming for planted clique</a>
+         </li>
 
      <li> <a href=lecture11.pdf>The spectrum of Abelian Cayley graphs</a>
          </li>
@@ -140,12 +142,14 @@ More on community detection, and an introduction to Semidefinite programming<br>
 Week 4: spectra of graphs, random walks, and other random processes
 <ul>
 <li>2022-03-01, 10:20-11:50<br>
-    SDP for planted clique and a study of robustness
+    SDP for planted clique and a study of robustness<br>
+    Readings: <a href=lecture10.pdf>[Handout 10]</a></li>
 <li>2022-03-02, 15:00-16:30<br>
     Eigenvalues and eigenvectors of Cayley graphs<br>
     Readings: <a href=lecture11.pdf>[Handout 11]</a></li>
 <li>2022-03-03, 15:00-16:30<br>
-    Expanders, random walks and MCMC algorithms
+    More on eigenvalues and eigenvectors of Cayley graphs<br>
+    Readings: same as previous lecture
     </ul>
    
 </body>
