30540 add set cover to contents of march 8 lecture

--- a/30540/index.html
+++ b/30540/index.html
@@ -196,8 +196,8 @@ and the study of the computational complexity of problems.
 <p>
 <li>
 2022-03-08: <b>Greedy Algorithms IV</b><br>
-<i>Contents:</i> More on data compression, entropy<br>
-<i>Readings:</i> Section 5.2, <a href=notes-compression.pdf>notes</a><br>
+<i>Contents:</i> More on data compression, entropy; set cover<br>
+<i>Readings:</i> Section 5.2, 5.4<a href=notes-compression.pdf>notes</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
