--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ CUHK<br>
        
        <p>
        
-    <li>am organizing a workshop on <i>fairness in artificial intelligence</I>, to be held in Milan on June 27 (more information forthcoming)
+    <li>am organizing a workshop on <a href="fai.html"><i>fairness in artificial intelligence</I></a>, to be held in Milan on June 27 
         </ul>
 
 </div>
