--- a/fai.html
+++ b/fai.html
@@ -36,6 +36,8 @@
     Confirmed speakers:
     
     <ul>
+        
+        <li><a href=https://sites.google.com/site/sanghamitraweb/>Sanghamitra Dutta</a> (JP Morgan)
         <li><a href=https://en.wikipedia.org/wiki/Cynthia_Dwork>Cynthia Dwork</a> (Harvard)
             </li>
         <li><a href=https://faculty.unibocconi.eu/dirkhovy/>Dirk Hovy</a> (Bocconi)
