notes on max flow for CS2

--- a/30540/index.html
+++ b/30540/index.html
@@ -63,6 +63,7 @@ and the study of the computational complexity of problems.
     <ul>
         <li><a href=notes-dijkstra.pdf>Notes on the proof of correctness of Dijkstra's algorithm</a></li>
         <li><a href=notes-compression.pdf>Notes on data compression</a></li>
+        <li><a href=notes-flow.pdf>Notes on network flows and cuts</a></li>
         </ul>
     
 
@@ -248,7 +249,7 @@ and the study of the computational complexity of problems.
 <li>
 2022-04-01: <b>Flows I</b><br>
 <i>Contents:</i> Flows in networks, residual network, Ford-Fulkerson<br>
-<i>Readings:</i> Section 7.2, notes<br>
+<i>Readings:</i> Section 7.2, <a href=notes-flow.pdf>notes</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
