notes on NP-completeness for 30540

--- a/30540/index.html
+++ b/30540/index.html
@@ -64,6 +64,7 @@ and the study of the computational complexity of problems.
         <li><a href=notes-dijkstra.pdf>Notes on the proof of correctness of Dijkstra's algorithm</a></li>
         <li><a href=notes-compression.pdf>Notes on data compression</a></li>
         <li><a href=notes-flow.pdf>Notes on network flows and cuts</a></li>
+        <li><a href=notes-np1.pdf>Notes on NP-completeness, Part 1</a></li>
         </ul>
     
 
@@ -308,7 +309,7 @@ and the study of the computational complexity of problems.
 <li>
 2022-04-26: <b>NP-completeness I</b><br>
 <i>Contents:</i> Combinatorial explosion, search problems, P, NP, reductions, NP-completeness<br>
-<i>Readings:</i> Section 8.1, notes<br>
+<i>Readings:</i> Section 8.1, <li><a href=notes-np1.pdf>notes</a></li><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
