30540 notes on cuts and matchings

--- a/30540/index.html
+++ b/30540/index.html
@@ -64,6 +64,7 @@ and the study of the computational complexity of problems.
         <li><a href=notes-dijkstra.pdf>Notes on the proof of correctness of Dijkstra's algorithm</a></li>
         <li><a href=notes-compression.pdf>Notes on data compression</a></li>
         <li><a href=notes-flow.pdf>Notes on network flows and cuts</a></li>
+        <li><a href=notes-cut-matching.pdf>Notes on reductions, cuts, and matchings</a></li>
         <li><a href=notes-np1.pdf>Notes on NP-completeness, Part 1</a></li>
         </ul>
     
@@ -249,7 +250,7 @@ and the study of the computational complexity of problems.
 
 <li>
 2022-04-01: <b>Flows I</b><br>
-<i>Contents:</i> Flows in networks, residual network, Ford-Fulkerson<br>
+<i>Contents:</i> Flows in networks, residual network, Ford-Fulkerson, Max flow min cut theorem, analysis of Edmonds-Karp<br>
 <i>Readings:</i> Section 7.2, <a href=notes-flow.pdf>notes</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
@@ -257,8 +258,8 @@ and the study of the computational complexity of problems.
 <p>
 <li>
 2022-04-05: <b>Flows II</b><br>
-<i>Contents:</i> Max flow min cut theorem, analysis of Edmonds-Karp, reduction to other problems<br>
-<i>Readings:</i> Notes, Section 7.3<br>
+<i>Contents:</i> Reduction to other problems, Karger's min cut algorithms<br>
+<i>Readings:</i> <a href=notes-cut-matching.pdf>Notes</a>, Section 7.3<br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
@@ -309,7 +310,7 @@ and the study of the computational complexity of problems.
 <li>
 2022-04-26: <b>NP-completeness I</b><br>
 <i>Contents:</i> Combinatorial explosion, search problems, P, NP, reductions, NP-completeness<br>
-<i>Readings:</i> Section 8.1, <li><a href=notes-np1.pdf>notes</a></li><br>
+<i>Readings:</i> Section 8.1, <a href=notes-np1.pdf>notes</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
