Second set of notes on NP completeness

--- a/30540/index.html
+++ b/30540/index.html
@@ -66,6 +66,7 @@ and the study of the computational complexity of problems.
         <li><a href=notes-flow.pdf>Notes on network flows and cuts</a></li>
         <li><a href=notes-cut-matching.pdf>Notes on reductions, cuts, and matchings</a></li>
         <li><a href=notes-np1.pdf>Notes on NP-completeness, Part 1</a></li>
+       <li><a href=notes-np2.pdf>Notes on NP-completeness, Part 2</a></li>
         </ul>
     
 
@@ -317,8 +318,8 @@ and the study of the computational complexity of problems.
 <p>
 <li>
 2022-04-28: <b>NP-completeness II</b><br>
-<i>Contents:</i> NP-completeness of SAT, Independent Set, Clique<br>
-<i>Readings:</i> Notes<br>
+<i>Contents:</i>  NP-completeness of Independent Set, Clique, Set Cover, Subset Sum<br>
+<i>Readings:</i> Section 8.1, <a href=notes-np2.pdf>notes</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
