last NP-completeness lecture

--- a/30540/index.html
+++ b/30540/index.html
@@ -67,6 +67,8 @@ and the study of the computational complexity of problems.
         <li><a href=notes-cut-matching.pdf>Notes on reductions, cuts, and matchings</a></li>
         <li><a href=notes-np1.pdf>Notes on NP-completeness, Part 1</a></li>
        <li><a href=notes-np2.pdf>Notes on NP-completeness, Part 2</a></li>
+      <li><a href=notes-np3.pdf>Notes on NP-completeness, Part 3</a></li>
+      <li><a href=notes-np4.pdf>Notes on NP-completeness, Part 4</a></li>
         </ul>
     
 
@@ -319,23 +321,23 @@ and the study of the computational complexity of problems.
 <li>
 2022-04-28: <b>NP-completeness II</b><br>
 <i>Contents:</i>  NP-completeness of Independent Set, Clique, Set Cover, Subset Sum<br>
-<i>Readings:</i> Section 8.1, <a href=notes-np2.pdf>notes</a><br>
+<i>Readings:</i> Sections 8.2 and 8.3, <a href=notes-np2.pdf>notes</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
 <p>
 <li>
 2022-04-29: <b>NP-completeness III</b><br>
-<i>Contents:</i> More NP-complete problems<br>
-<i>Readings:</i> Notes<br>
+<i>Contents:</i> NP-completeness of Partition, Bin Packing, Scheduling, Hamiltonian Circuit, TSP<br>
+<i>Readings:</i> Section 8.3 and <a href=notes-np3.pdf>notes</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
 <p>
 
 2022-05-03: <b>NP-completeness IV</b><br>
-<i>Contents:</i> More NP-complete problems<br>
-<i>Readings:</i> Notes<br>
+<i>Contents:</i> Boolean circuits, and NP-completeness of Circuits SAT and 3SAT<br>
+<i>Readings:</i> <a href=notes-np4.pdf>notes</a><br>
 <i>Instructor:</i> Trevisan<br>
 <i>Suggested Exercises:</i> <br>
 </li>
